[gd_scene load_steps=11 format=3 uid="uid://lwx4dshxo3im"]

[ext_resource type="Script" path="res://Stages/End/scene_manager.gd" id="1_xx0ro"]
[ext_resource type="Script" path="res://Stages/timer.gd" id="2_8qulv"]
[ext_resource type="FontFile" uid="uid://bw01338ngvlwl" path="res://Assets/Fonts/Daydream.ttf" id="2_tvdjb"]
[ext_resource type="PackedScene" uid="uid://cq2hv3iq05my6" path="res://Stages/menu.tscn" id="4_5a43q"]
[ext_resource type="AudioStream" uid="uid://55ewl8spid8m" path="res://Stages/Minigames/Mining/loopgot.mp3" id="5_etqnp"]

[sub_resource type="Theme" id="Theme_nrmqg"]
default_font = ExtResource("2_tvdjb")

[sub_resource type="Animation" id="Animation_pxoeq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_j5q8n"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_mt7n5"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lpes6"]
_data = {
"RESET": SubResource("Animation_pxoeq"),
"fade_in": SubResource("Animation_j5q8n"),
"fade_out": SubResource("Animation_mt7n5")
}

[node name="SceneManager" type="Node2D"]
script = ExtResource("1_xx0ro")

[node name="OverlayLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Overlay" type="ColorRect" parent="OverlayLayer"]
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -508.0
offset_top = -384.0
offset_right = -408.0
offset_bottom = -318.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(32, 32)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="RichTextLabel" type="RichTextLabel" parent="OverlayLayer"]
visible = false
offset_left = 2.0
offset_right = 42.0
offset_bottom = 40.0
scale = Vector2(3.06723, 3.06723)
theme = SubResource("Theme_nrmqg")
scroll_active = false
tab_size = 1
shortcut_keys_enabled = false
visible_characters = 2
script = ExtResource("2_8qulv")

[node name="Timer" type="Timer" parent="OverlayLayer/RichTextLabel"]
wait_time = 30.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lpes6")
}

[node name="Menu" parent="." instance=ExtResource("4_5a43q")]
layer = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_etqnp")
volume_db = -8.15
autoplay = true
parameters/looping = true

[connection signal="timeout" from="OverlayLayer/RichTextLabel/Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
